--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@postalsys/email-text-tools",
-    "version": "1.3.0",
+    "version": "1.3.1",
     "description": "Email text tools",
     "main": "index.js",
     "scripts": {
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "dompurify": "3.0.1",
+        "gpt3-tokenizer": "1.1.5",
         "handlebars": "4.7.7",
         "he": "1.2.0",
         "html-to-text": "9.0.5",
