--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@postalsys/email-text-tools",
-    "version": "1.4.0",
+    "version": "1.4.1",
     "description": "Email text tools",
     "main": "index.js",
     "scripts": {
@@ -33,8 +33,8 @@
         "juice": "9.0.0",
         "linkify-it": "4.0.1",
         "moment-timezone": "0.5.43",
-        "node-fetch": "2.6.7",
         "node-html-parser": "6.1.5",
-        "tlds": "1.238.0"
+        "tlds": "1.238.0",
+        "undici": "5.22.0"
     }
 }
