feat(mime-html): add timeout protection for CSS processing with juice
- Add async version with worker thread timeout to prevent hangs on problematic CSS
- Implement sync version with known problematic selector removal (:is, :where, :has)
- Add worker thread module for isolated juice processing with timeout
- Fix potential infinite loop in DOM traversal by converting NodeList to array
- Maintain backward compatibility with existing sync API
- Add test case with problematic HTML that causes juice to hang

The juice library (v11.0.x) can hang indefinitely on modern CSS selectors.
This implementation provides robust protection while maintaining compatibility.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "he": "1.2.0",
         "html-to-text": "9.0.5",
         "jsdom": "26.1.0",
-        "juice": "11.0.1",
+        "juice": "^11.0.2",
         "linkify-it": "5.0.0",
         "moment-timezone": "0.6.0",
         "node-html-parser": "7.0.1",
