test: add comprehensive test suite using Node.js built-in test runner
- Add tests for mime-html sync and async versions
- Add tests for worker pool functionality
- Add tests for edge cases and real-world HTML
- Test concurrent processing and error handling
- Verify problematic CSS selector filtering works
- Add npm test scripts for running and watching tests

All critical functionality is now covered with tests including:
- HTML processing and sanitization
- CSS inlining and problematic selector removal
- Worker pool management and concurrency
- Backward compatibility
- Performance boundaries

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "Email text tools",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "node --test test/*.test.js",
+    "test:coverage": "node --test --experimental-test-coverage test/*.test.js",
+    "test:watch": "node --test --watch test/*.test.js",
         "update": "rm -rf node_modules package-lock.json && ncu -u && npm install"
     },
     "repository": {
