chore: clean up codebase and add linting/formatting
- Remove temporary test files (test-*.js) from root directory
- Remove console.warn from production code
- Add ESLint with flat config for v9
- Add Prettier formatting
- Configure ESLint and Prettier to work together
- Fix all linting issues (unused variables)
- Format all code with consistent style
- Add npm scripts for lint, lint:fix, format, format:check
- Update .gitignore to exclude temporary test files
- Complete deletion of processed.txt

All tests passing with no linting or formatting issues.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
     "main": "index.js",
     "scripts": {
         "test": "node --test test/*.test.js",
-    "test:coverage": "node --test --experimental-test-coverage test/*.test.js",
-    "test:watch": "node --test --watch test/*.test.js",
+        "test:coverage": "node --test --experimental-test-coverage test/*.test.js",
+        "test:watch": "node --test --watch test/*.test.js",
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix",
+        "format": "prettier --write .",
+        "format:check": "prettier --check .",
         "update": "rm -rf node_modules package-lock.json && ncu -u && npm install"
     },
     "repository": {
@@ -21,8 +25,11 @@
     },
     "homepage": "https://github.com/postalsys/email-text-tools#readme",
     "devDependencies": {
+        "@eslint/js": "^9.36.0",
+        "eslint": "^9.36.0",
         "eslint-config-nodemailer": "1.2.0",
-        "eslint-config-prettier": "9.1.0"
+        "eslint-config-prettier": "9.1.0",
+        "prettier": "^3.6.2"
     },
     "dependencies": {
         "dompurify": "3.2.7",
