--- a/package.json
+++ b/package.json
@@ -25,21 +25,20 @@
     },
     "homepage": "https://github.com/postalsys/email-text-tools#readme",
     "devDependencies": {
-        "@eslint/js": "^9.36.0",
-        "eslint": "^9.36.0",
-        "eslint-config-nodemailer": "1.2.0",
-        "eslint-config-prettier": "9.1.0",
-        "prettier": "^3.6.2"
+        "@eslint/js": "9.38.0",
+        "eslint": "9.38.0",
+        "eslint-config-prettier": "10.1.8",
+        "prettier": "3.6.2"
     },
     "dependencies": {
-        "dompurify": "3.2.7",
+        "dompurify": "3.3.0",
         "he": "1.2.0",
         "html-to-text": "9.0.5",
-        "jsdom": "27.0.0",
-        "juice": "^11.0.2",
+        "jsdom": "27.0.1",
+        "juice": "11.0.3",
         "linkify-it": "5.0.0",
         "moment-timezone": "0.6.0",
         "node-html-parser": "7.0.1",
-        "tlds": "1.260.0"
+        "tlds": "1.261.0"
     }
 }
