fix: remove registry-url to enable OIDC authentication for trusted publishing

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,11 +24,13 @@ jobs:
         if: ${{ needs.release-please.outputs.release_created }}
         runs-on: ubuntu-latest
         environment: npm-publish
+        permissions:
+            contents: read
+            id-token: write
         steps:
             - uses: actions/checkout@v4
             - uses: actions/setup-node@v4
               with:
                   node-version: 20
-                  registry-url: 'https://registry.npmjs.org'
             - run: npm ci
             - run: npm publish --provenance --access public
