--- a/release-please-config.json
+++ b/release-please-config.json
@@ -3,7 +3,8 @@
         ".": {
             "release-type": "node",
             "package-name": "@postalsys/email-text-tools",
-            "pull-request-title-pattern": "chore${scope}: release ${version} [skip-ci]"
+            "pull-request-title-pattern": "chore${scope}: release ${version} [skip-ci]",
+            "include-component-in-tag": false
         }
     }
 }
